bizinikiwi/pezframe/support/test/tests/pezpallet_ui/task_missing_list.stderr
error: missing `#[pezpallet::task_list(..)]` attribute
  --> tests/pezpallet_ui/task_missing_list.rs:33:6
   |
33 |         fn foo() -> DispatchResult {
   |            ^^^
